deploy/examples/bookinfo/bookinfo-backend-vs-add-delay-b.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"creationTimestamp":"2020-12-17T16:15:01Z","generation":6,"labels":{"createdby":"allspark"},"managedFields":[{"apiVersion":"networking.istio.io/v1alpha3","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:labels":{".":{},"f:createdby":{}}},"f:spec":{".":{},"f:exportTo":{},"f:hosts":{}}},"manager":"k8s-cluster-manager","operation":"Update","time":"2020-12-17T16:15:01Z"},{"apiVersion":"networki [...]
  creationTimestamp: "2020-12-17T16:15:01Z"
  generation: 7
  labels:
    createdby: allspark
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:createdby: {}
      f:spec:
        .: {}
        f:exportTo: {}
        f:hosts: {}
    manager: k8s-cluster-manager
    operation: Update
    time: "2020-12-17T16:15:01Z"
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:http: {}
    manager: kubectl
    operation: Update
    time: "2020-12-17T17:17:06Z"
  name: nsxsm.gns.fcarta-bookinfo-gns.reviews
  namespace: bookinfo
  resourceVersion: "842448"
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/bookinfo/virtualservices/nsxsm.gns.fcarta-bookinfo-gns.reviews
  uid: af5358d6-d4b2-4723-bece-bceb892bae32
spec:
  exportTo:
  - .
  hosts:
  - reviews.tsm.mytiles.me
  http:
  - headers:
      request:
        add:
          x-allspark-request-header: fcarta-aws-dev-b-m3zy7lmx
    route:
    - destination:
        host: reviews.tsm.mytiles.me
