deploy/examples/bookinfo/bookinfo-SRE-optimized.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# This file defines the services, service accounts, and deployments for the Bookinfo sample.
#
# To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
#
# Alternatively, you can deploy any resource separately:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
##################################################################################################

##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: bookinfo-details
  labels:
    account: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: docker.io/istio/examples-bookinfo-details-v1:1.16.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000        
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
---
##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: bookinfo-ratings
  labels:
    account: ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
      - name: ratings
        image: docker.io/istio/examples-bookinfo-ratings-v1:1.16.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
---
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: bookinfo-reviews
  labels:
    account: reviews
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
  labels:
    app: reviews
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v1:1.16.2
        imagePullPolicy: IfNotPresent
        env:
        - name: LOG_DIR
          value: "/tmp/logs"
        - name: "JAVA_ARGS"
          value: "-Xms768m -Xmx1563m"
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
        resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"      
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
  labels:
    app: reviews
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews
      version: v2
  template:
    metadata:
      labels:
        app: reviews
        version: v2
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v2:1.16.2
        imagePullPolicy: IfNotPresent
        env:
        - name: LOG_DIR
          value: "/tmp/logs"
        - name: "JAVA_ARGS"
          value: "-Xms768m -Xmx1563m"
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
        resources:
          limits:
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "2Gi"
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  labels:
    app: reviews
    version: v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews
      version: v3
  template:
    metadata:
      labels:
        app: reviews
        version: v3
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v3:1.16.2
        imagePullPolicy: IfNotPresent
        env:
        - name: LOG_DIR
          value: "/tmp/logs"
        - name: "JAVA_ARGS"
          value: "-Xms768m -Xmx1563m"
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
        resources:
          limits:
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "2Gi"
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
    service: productpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: bookinfo-productpage
  labels:
    account: productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
  labels:
    app: productpage
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: productpage
      version: v1  
  template:
    metadata:
      labels:
        app: productpage
        version: v1
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
      - name: productpage
        image: docker.io/istio/examples-bookinfo-productpage-v1:1.16.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          runAsUser: 1000
        resources:
          limits:
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9080
            scheme: "HTTP"
          initialDelaySeconds : 10
          timeoutSeconds : 3
          periodSeconds : 5
          successThreshold : 1
          failureThreshold : 5
      volumes:
      - name: tmp
        emptyDir: {}
---
##################################################################################################
# Details HPA
##################################################################################################
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: details-v1
  namespace: bookinfo
spec:
  maxReplicas: 8
  minReplicas: 2
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: details-v1
---
##################################################################################################
# Ratings HPA
##################################################################################################
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: ratings-v1
  namespace: bookinfo
spec:
  maxReplicas: 3
  minReplicas: 1
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: ratings-v1
---
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: reviews-v1
  namespace: bookinfo
spec:
  maxReplicas: 2
  minReplicas: 1
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: reviews-v1
---
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: reviews-v2
  namespace: bookinfo
spec:
  maxReplicas: 4
  minReplicas: 2
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: reviews-v2
---
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: reviews-v3
  namespace: bookinfo
spec:
  maxReplicas: 4
  minReplicas: 2
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: reviews-v3
---
##################################################################################################
# Productpage HPA
##################################################################################################
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: productpage-v1
  namespace: bookinfo
spec:
  maxReplicas: 32
  minReplicas: 4
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: productpage-v1
